Use my cursed release implementation I guess?

--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -26,3 +26,9 @@ jobs:
         with:
           name: Unzip-me
           path: build/tmp/deploy/*.jar
+
+      - name: Upload as release
+        if: ${{startsWith(github.ref, 'refs/tags/')}}
+        uses: svenstaro/upload-release-action@v2
+        with:
+          file: build/tmp/deploy/*.jar
