--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -31,4 +31,5 @@ jobs:
         if: ${{startsWith(github.ref, 'refs/tags/')}}
         uses: svenstaro/upload-release-action@v2
         with:
+          file_glob: true
           file: build/tmp/deploy/*.jar
